New in v0.10.2 (2003/01/19)
---------------------------

If get a socket error from trying to create a socket whose name is too
long, just skip file instead of exiting with error (original bug
report by Ivo De Decker).



New in v0.10.1 (2002/09/16)
---------------------------

rdiff-backup should now correctly handle files larger than 2GB.
Thanks to Russ Allbery for telling me how to do this.


New in v0.10.0 (2002/09/10)
---------------------------

Fixed bug, probably introduced in 0.9.3, which prevented restores from
a local source to a remote destination.  Reported by Phillip Eby.

Fixed another bug reported by Phillip Eby, where restores would fail
if rdiff-backup had only been run once and no increments were
available.

A few man page additions regarding restoring, statistics, and
--test-server (thanks to Gregor Zattler, Christopher Schanzle, and
Tobias Polzin for suggestions).

Fixed comparison bug where rdiff-backup would unnecessarily report a
directory as changed when its source size differed from its mirror
size.  Thanks to Tim Allen for report.


New in v0.9.5 (2002/08/09)
--------------------------

Fixed --verbosity option (now both -v and --verbosity work).  Thanks
to Chris Dumont for report.

****** IMPORTANT ****** Fixed serious permissions bug found by Robert
Weber.  Previous versions in the 0.9.x branch would throw away high
bit permissions (like the setuid and setuid bits).  This would be
especially bad when running with the --change-source-perms operation.
Anyone running 0.9.0 - 0.9.4 should upgrade immediately.

Complain about --change-source-perms when running as root, as this
option should not be necessary then.

Fixed bug with --windows-mode.  Thanks to Chris Grindstaff for report.


New in v0.9.4 (2002/07/24)
--------------------------

Man page now correctly included in rpm.

To prevent confusion, rdiff-backup script does not have exec
permissions until it is installed (thanks Jason Piterak).
