@@ -13,4 +13,4 @@ if len(sys.argv) > 1: os.chdir(sys.argv[1])
 #PipeConnection(sys.stdin, sys.stdout).Server()
 
 #os.system("/home/ben/prog/python/rdiff-backup/rdiff-backup --server")
-os.system("/home/ben/prog/python/rdiff-backup/testing/server.py /home/ben/prog/python/rdiff-backup/src")
+os.system("/home/ben/prog/python/rdiff-backup/testing/server.py /home/ben/prog/python/rdiff-backup/rdiff_backup")
